--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -39,12 +39,106 @@ body{
     bottom: 0;
     left: 0;
     background: #fff;
-    padding-top: 12px;
 }
 .bottom_menu a{
     text-decoration: none;
     color: #333;
+    display: block;
+
 }
 .bottom_menu a:hover i{
     color: #5842E3;
 }
+.scan-tab{
+    width: 60px;
+    height: 60px;
+    background: #EDEDF5;
+    border-radius: 100%;
+    position: fixed;
+    right: 0;
+    left: 0;
+    display: flex !important;
+    justify-content: center;
+    align-items: center;
+    bottom: 60px;
+    margin: 0 auto;
+    animation: glow 5s infinite;
+
+}
+@keyframes glow {
+    0% {
+        box-shadow: 0 0 -15px #5842E3;
+    }
+    40% {
+        box-shadow: 0 0 20px #0eec85;
+    }
+
+    60% {
+        box-shadow: 0 0 20px #ec128a;
+    }
+
+    100% {
+        box-shadow: 0 0 -15px #e7e40b;
+    }
+}
+
+.scan-tab .inside{
+    width: 52px;
+    height: 52px;
+    border-radius: 100%;
+    display: flex;
+    background:#fff;
+    justify-content: center;
+    align-items: center;
+}
+
+.scan-tab .inside .i{
+    margin: 0;
+}
+.profile-img{
+    text-align: center;
+}
+.profile-img img{
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
+    padding: 8px;
+    border: 1px solid #ddd;
+    background:#fff;
+}
+.account .card{
+    border-radius: 10px;
+}
+
+.account .logout{
+    cursor: pointer;
+}
+.account .update-password{
+    color:#333;
+    text-decoration: none;
+}
+
+.wallet .mycard{
+    background: #2209c5;
+    color: #fff;
+}
+
+.wallet .mycard span{
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 500;
+}
+.wallet .mycard h3{
+    font-weight: 700;
+    font-size: 30px;
+}
+.wallet .mycard h4{
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 10px;
+}
+.scan-box img{
+   width: 30px;
+   height: 30px;
+}
+
